# simsig_interface

./: .gitignore  README.md  about_gateway.md  requirements.txt  setup.cfg
.github/workflows/: run_tests.yaml
examples/: console.py
simsig_interface/: __init__.py  connection.py  entity.py  exception.py  identifier.py  listener.py  parser.py  update_message.py
src/: connection.py  exception.py
tests/: conftest.py  test_command.py  test_connect.py  test_entity.py  test_listener.py  test_parser.py  util.py
