[metadata]
name = simsig-interface
version = 0.1.0
author = Jack Deeth
description = Wrapper for SimSig Interface Gateway
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.7
install_requires =
    stomp.py

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    pytest
    pytest-cov
    pytest-mock
    hypothesis
    pylint
    black
    mypy

[tool:pytest]
xfail_strict = true
# allow test case functions (i.e. class methods) start with "should"
python_functions = test_* should_*
addopts =
    --cov=src
    -p no:faulthandler
    --strict-markers
markers =
    wip: work in progress

[pylint]
recursive = yes
ignore =
    tests,
    venv,
    .*

[pylint.'MESSAGES CONTROL']
disable =
    missing-module-docstring,
    use-dict-literal,
    use-list-literal
