[metadata]
name = simsig_interface
version = 0.1.2
author = Jack Deeth
description = Wrapper for SimSig Interface Gateway
license = MIT
license_files = LICENSE

[options]
packages = simsig_interface
python_requires = >= 3.7
install_requires =
    stomp.py

[options.packages.find]
where = simsig_interface

[options.extras_require]
dev =
    coverage
    pytest
    pytest-cov
    pytest-mock
    hypothesis
    pylint
    black
    mypy
examples =
    prompt-toolkit

[tool:pytest]
xfail_strict = true
# allow test case functions (i.e. class methods) start with "should"
python_functions = test_* should_*
addopts =
    --cov=simsig_interface
    -p no:faulthandler
    --strict-markers
markers =
    wip: work in progress

[pylint]
recursive = yes
enable = useless-suppression
ignore =
    build,
    tests,
    venv,
    .tox,
    .*

[pylint.'MESSAGES CONTROL']
disable =
    missing-module-docstring,
    use-dict-literal,
    use-list-literal

[tox:tox]
envlist = py3{7,8,9,10}

[gh-actions]
python:
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
deps =
    pytest
    pytest-cov
    pytest-mock
commands =
    py3{7,8,9}: pytest --no-cov
    py310: pytest
